[package]
name = "ckb-vm-pprof-protos"
version = "0.121.0"
edition = "2021"
description = "Crate for generating Rust definitions from pprof proto"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.7"

[target.'cfg(target_os = "linux")'.build-dependencies]
protoc-bin-vendored = "3.1"

[dependencies]
protobuf = { version = "3.7", features = ["with-bytes"] }
